# MarkerDetectorApp

./: .gitignore  App.tsx  README.md  TECHNICAL_APPROACH.md  app.json  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/markerdetectorapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/markerdetectorapp/opencv/: MarkerDetectorFrameProcessorPlugin.kt  MarkerDetectorModule.kt  MarkerDetectorPackage.kt
android/app/src/main/jni/: CMakeLists.txt  FeatureExtractor.cpp  GeometryUtils.cpp  HomographyUtils.cpp  ImageProcessor.cpp  MarkerDetector.cpp  MarkerStructureValidator.cpp  MarkerValidator.cpp
android/app/src/main/jni/include/: ContourAnalyzer.h  DetectorTypes.h  GeometryUtils.h  ImageProcessor.h  MarkerStructureValidator.h  PerspectiveProcessor.h
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: file_provider_paths.xml  network_security_config.xml
src/components/hud/: HUDOverlay.tsx
src/components/ui/: DebugOverlayPanel.tsx  DetectionStatusBadge.tsx  FPSCounter.tsx  MarkerThumbnail.tsx  ScanCounter.tsx  ScanProgressBar.tsx
src/constants/: index.ts
src/hooks/: useCameraPermission.ts  useCameraSetup.ts  useDebugOverlay.ts  useFrameProcessingPipeline.ts  useHapticFeedback.ts  useMarkerCollection.ts  useMarkerDetector.ts
src/processing/: DuplicateDetector.ts
src/screens/: CameraScreen.tsx  ResultsGalleryScreen.tsx  ScannerScreen.tsx
src/store/: useAppStore.ts
src/types/: index.ts
